# the-anarchist-workshop

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
command-line-interface/: Cargo.toml
command-line-interface/src/: main.rs
src/: lib.rs  main.rs  the-calendar.rs  the-people-registry.rs  the-shop.rs
the-anarchist-workshop-command-line-interface/: Cargo.toml
the-anarchist-workshop-command-line-interface/src/: main.rs
