[package]
name = "the-anarchist-workshop"
version = "0.1.0"
authors = ["Joaquín Rosales G. <casabenita7@gmail.com>"]
description = "The Anarchist Workshop. This is a library filled with a bunch of code put together in order to run things at workshops, where people work and make stuff."
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.7"

[workspace]
members = ["command-line-interface"]
