[package]
name = "taw"
version = "0.1.0"
authors = ["Joaquín Rosales G. <casabenita7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "taw"
path = "./src/main.rs"

[dependencies]
structopt = { version = "0.3" }
the-anarchist-workshop = { path = "../" }
tracing = "0.1.32"
tracing-appender = "0.2"
tracing-subscriber = "0.3.9"
